--- a/src/css/App.css
+++ b/src/css/App.css
@@ -14,7 +14,18 @@
   background-color: #222;
   height: 150px;
   padding: 20px;
-  color: white;
+  /* color: white; */
+  color: white; 
+  font-family: "Great Vibes", cursive; 
+  text-shadow: 1px 1px 1px white; 
+  font-size: large;
+  /* font-size: 165px;  */
+  /* line-height: 160px;  */
+  /* font-weight: normal;  */
+  /* margin-bottom: 0px;  */
+  /* margin-top: 40px;  */
+  text-align: center; 
+  
 }
 
 @keyframes fadeIn {
@@ -29,6 +40,8 @@
 .App-intro {
   font-size: large;
   margin: 5% 10%;
+  font-family: "Great Vibes", cursive; 
+  text-shadow: 1px 1px 1px black; 
 }
 
 @keyframes App-logo-spin {
