--- a/src/css/App.css
+++ b/src/css/App.css
@@ -44,6 +44,15 @@
   text-shadow: 1px 1px 1px black; 
 }
 
+.content img {
+  width: 400px;
+  transition: width 1s;
+}
+
+.content img:hover {
+  width: 800px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
